# django-lightweight-queue

./: COPYING  DEVELOPMENT.md  README.md  pyproject.toml  requirements.txt  runtests  setup.cfg
.circleci/: config.yml
.github/workflows/: check.yml  publish.yml
django_lightweight_queue/: __init__.py  app_settings.py  apps.py  command_utils.py  constants.py  cron_scheduler.py  exposition.py  job.py  logger.py  machine_types.py  models.py  progress_logger.py  runner.py  task.py  types.py  urls.py  utils.py  views.py  worker.py
django_lightweight_queue/backends/: base.py  db.py  debug_web.py  redis.py  reliable_redis.py  synchronous.py
django_lightweight_queue/management/commands/: queue_clear.py  queue_configuration.py  queue_deduplicate.py  queue_pause.py  queue_resume.py  queue_runner.py  queue_worker.py
django_lightweight_queue/middleware/: logging.py  transaction.py
examples/: init  logrotate
script/: type-check
tests/: _demo_extra_config.py  _demo_extra_config_falsey.py  _demo_extra_settings.py  _demo_extra_settings_unexpected.py  mixins.py  settings.py  test_debug_web_backend.py  test_extra_config.py  test_extra_settings.py  test_job.py  test_pause_resume.py  test_reliable_redis_backend.py  test_task.py  urls.py
