[tool.poetry]
name = "django-lightweight-queue"
version = "4.11.0"
description = "Lightweight & modular queue and cron system for Django"
authors = ["Thread Engineering <tech@thread.com>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/thread/django-lightweight-queue/"
include = ["django_lightweight_queue/py.typed"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
]

[tool.poetry.dependencies]
python = ">=3.6.1,<4"
django = ">=2.2"
daemonize = "~=2.5.0"
prometheus-client = "~=0.7"
typing-extensions = "^4"
redis = {version = "~=3.*", optional = true}
tqdm = {version = "^4.54.1", optional = true}

[tool.poetry.extras]
redis = ["redis"]
progress = ["tqdm"]

[tool.poetry.dev-dependencies]
# Testing tools
fakeredis = "^1.1.0"
freezegun = "^1.1.0"

# Linting tools
flake8 = "^4.0.0"
isort = "^5.10"
mypy = "^0.940"

# Flake 8 plugins
flake8-bugbear = "^21.11.29"
flake8-builtins = "^1.5.3"
flake8-coding = "^1.3.2"
flake8-commas = "^2.1.0"
flake8-comprehensions = "^3.7.0"
flake8-debugger = "^4.0.0"
flake8-isort = "^4.1.1"
flake8-mutable = "^1.2.0"
flake8-pep3101 = "^1.3.0"
flake8-tidy-imports = "^4.5.0"

# Type stubs
types-freezegun = "^1.1.3"
types-redis = "^4.0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
